--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "krsntn <kanahan0110@gmail.com>",
   "dependencies": {
     "bootstrap": "^4.4.1",
+    "device-detector-js": "^2.2.1",
     "dotenv": "^8.2.0",
     "firebase": "^7.14.1",
     "gatsby": "^2.19.45",
